--- a/MoinMoin/templates/meta.html
+++ b/MoinMoin/templates/meta.html
@@ -9,7 +9,7 @@
 {% block content_data %}
 <h1>
     {{ title }}
-    {% if show_revision %}({{ _("Revision") }} {{ rev.revid }}){% endif %}
+    {% if show_revision %}({{ _("Revision") }} {{ rev.revid | shorten_id }}){% endif %}
 </h1>
 {% if meta_rendered %}
 <div id="moin-content-meta">
