--- a/MoinMoin/templates/lookup.html
+++ b/MoinMoin/templates/lookup.html
@@ -35,14 +35,14 @@
             {% for result in results %}
                 {% if result['wikiname'] == cfg.interwikiname %}
                     <tr>
-                        <td class="moin-wordbreak">{{ result.pos + 1 }}
-                        <a href="{{ url_for_item(item_name=result['name'], wiki_name='Self', rev=result['revid']) }}"><b>{{ result['name'] }}</b></a>
+                        <td class="moin-wordbreak">{{ loop.index }}
+                        <a href="{{ url_for_item(item_name=result.name, wiki_name='Self', rev=result.revid) }}"><b>{{ result.name }}</b></a>
                         </td>
                     </tr>
                 {% else %}
                     <tr>
-                        <td class="moin-wordbreak">{{ result.pos + 1 }}
-                        <a class="moin-interwiki" href="{{ url_for_item(item_name=result['name'], wiki_name=result['wikiname'], rev=result['revid']) }}"><b>{{ "%s:%s" % (result['wikiname'], result['name']) }}</b></a>
+                        <td class="moin-wordbreak">{{ loop.index }}
+                        <a class="moin-interwiki" href="{{ url_for_item(item_name=result.name, wiki_name=result.wikiname, rev=result.revid) }}"><b>{{ "%s:%s" % (result.wikiname, result.name) }}</b></a>
                         </td>
                     </tr>
                 {% endif %}
