--- a/MoinMoin/themes/basic/templates/show.html
+++ b/MoinMoin/themes/basic/templates/show.html
@@ -94,3 +94,27 @@
     {% endblock %}
 
 {% endblock %}
+
+{% block local_panel %}
+        
+        <!-- user, site, item actions -->
+
+        {% if rev %}
+        <li class="nav-header">Metadata</li>
+                <li>{{ _("Revision:") }} {{rev.revid | shorten_id}}</li>
+                <li>({{ rev.meta['mtime']|datetimeformat }})</li>
+                <li>{{ _("By:") }} {{ utils.editor_info(rev.meta) }}</li>
+                <li>{{ _("Size:") }} {{ rev.meta['size'] }}</li>
+                <li>{{ _("Type:") }} {{ rev.meta['contenttype'] }}</li>
+                {% if rev.meta.tags %}
+                <li>
+                {{ _("Tags:") }}
+                {% for tag in rev.meta.tags -%}
+                <a href="{{ url_for('frontend.tagged_items', tag=tag) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+                {%- endfor -%}
+                </li>
+                {% endif %}
+        </li>
+        {% endif %}
+
+{% endblock %}
