Fixes traceback 'utils' undefined in the template show.html

--- a/MoinMoin/themes/basic/templates/show.html
+++ b/MoinMoin/themes/basic/templates/show.html
@@ -1,4 +1,5 @@
 {% extends theme("layout.html") %}
+{% import "utils.html" as utils %}
 {% set exists = storage.has_item(item_name) %}
 
 {% block views %}
