--- a/MoinMoin/templates/modify_text.html
+++ b/MoinMoin/templates/modify_text.html
@@ -2,6 +2,6 @@
 
 {% macro data_editor(form, item_name) %}
 {{ base_editor(form) }}
-{{ gen.textarea(form['data_text'], rows=form.rows|string, cols=form.cols|string) }}
+{{ gen.textarea(form['data_text'], rows=form.rows|string, cols=form.cols|string, **kwargs) }}
 <br />
 {% endmacro %}
