--- a/MoinMoin/templates/snippets.html
+++ b/MoinMoin/templates/snippets.html
@@ -70,4 +70,5 @@
 {# Additional Javascript #}
 {% macro scripts() -%}
 <script src="{{ url_for('serve.files', name='bootstrap', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+<script src="{{ url_for('frontend.template', filename='basic.js') }}"></script>
 {%- endmacro %}
