--- a/MoinMoin/themes/basic/templates/modify_meta.html
+++ b/MoinMoin/themes/basic/templates/modify_meta.html
@@ -1,14 +1,15 @@
 {% import "forms.html" as forms %}
 
 {% macro basic_meta_editor(form) %}
-    <dl>
-        {% for e in [
-            'itemtype',
-            'contenttype',
-            'summary',
-            'tags',
-            ] %}
-            {{ forms.render(form[e]) }}
-        {% endfor %}
-    </dl>
+    {% for e in [
+        'itemtype',
+        'contenttype',
+        'summary',
+        'tags',
+        ] %}
+        <div class="control-group">
+            {{ gen.label(form[e]) }}
+            {{ gen.input(form[e], type="text") }}
+        </div>
+    {% endfor %}
 {% endmacro %}
