--- a/MoinMoin/themes/basic/static/css/common.css
+++ b/MoinMoin/themes/basic/static/css/common.css
@@ -1,6 +1,11 @@
 html{
   overflow-y:scroll;
 }
+.nav-tabs > li > a:focus {
+  outline: 0px none;
+  border-color: rgba(82, 168, 236, 0.8);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 4px rgba(82, 168, 236, 0.6);
+}
 .sidebar-nav {
   padding: 9px 0;
 }
