Fixes #12, better title for the a sub-nav in the local panel

--- a/MoinMoin/themes/basic/templates/show.html
+++ b/MoinMoin/themes/basic/templates/show.html
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block site_actions %}
-    <li class="nav-header">Site Actions</li>
+    <li class="nav-header">Item Navigation</li>
     {%- for endpoint, label, title, check_exists in cfg.item_views if not endpoint in cfg.endpoints_excluded %}
         {%- if not check_exists or check_exists and exists %}
 
