--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -119,7 +119,7 @@
                                 </a>
                             {%- endif %}
                             {% if not loop.last %}
-                                <span class="divider">/</span>
+                                <span class="divider"> >> </span>
                             {% endif %}
                           </li>
                         {% endfor %}
